adjusting intro sounds and text list
however, don't know how to make them consistently further apart in CSS,
and don't want to have to write in a top margin for each item in list.
help!

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
 
           <!-- "Steel_Music_From_3MinFilm" backround music -->
-          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.75">
+          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-maxvolume="0.75">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
@@ -58,7 +58,7 @@
 
 
          <!-- "tower" photo -->
-          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2200="opacity:0;"></div>
+          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2150="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
@@ -74,7 +74,7 @@
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2400" data-stopmedia="5750">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2475" data-stopmedia="5700">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
@@ -123,7 +123,7 @@
 
           <!-- "making_steel" video -->
           <div class="video-container" style="height:1200px;margin-top:300px;margin-bottom: 300px;" >
-            <video data-mediaid="making_steel" data-startmedia="10000" data-stopmedia="12000" loop></video>
+            <video data-mediaid="making_steel" data-startmedia="9690" data-stopmedia="12000" loop></video>
           </div>
           <!-- end "making_steel" video -->          
 
@@ -215,7 +215,7 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-2000="opacity:0;" data-2400="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-2000="opacity:0;" data-2100="opacity:1;" data-2400="opacity:1;" data-2600="opacity:0">
               <p>For more than a century,<br>
               Bethlehem Steel was a major center of American industry</p>
             </div>
@@ -228,7 +228,7 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2450="opacity:0;" data-2550="opacity:1;">
+            <div style="margin-top:50px;" class="text-overlay" data-0="opacity:0;" data-2450="opacity:0;" data-2550="opacity:1;">
               <p>Golden Gate Bridge</p>
             </div>
             <!-- end text overlay -->
@@ -264,15 +264,45 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2950="opacity:0;" data-3025="opacity:1;">
+              <p>Lincoln Tunnel</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-3025="opacity:0;" data-3100="opacity:1;">
+              <p>Holland Tunnel</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-3100="opacity:0;" data-3175="opacity:1;">
+              <p>Rockefeller Center</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-3250="opacity:0;" data-3325="opacity:1;">
+              <p>Madison Square Garden</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-3350="opacity:0;" data-3425="opacity:1;">
+              <p>Hoover Dam</p>
+            </div>
+            <!-- end text overlay -->
+
+             <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-3450="opacity:0;" data-3525="opacity:1;">
+              <p>WW II armaments &amp; ships...</p>
+            </div>
+            <!-- end text overlay -->
+            
+            <!-- text overlay -->
 <!--             <div style="margin-top:200px;" class="text-overlay">
               <p>Workers at “The Steel” forged:
               <ul>
-                <li>Golden Gate Bridge</li>
-                <li>Empire State Building</li>
-                <li>Chrysler Building</li>
-                <li>Woolworth Building</li>
-                <li>Verrazano Bridge</li>
-                <li>Mackinac Bridge</li>
                 <li>Lincoln Tunnel</li>
                 <li>Holland Tunnel</li>
                 <li>Rockefeller Center</li>
