--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
 
          <!-- "tower" photo -->
-          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2150="opacity:0;"></div>
+          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -470px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2150="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
@@ -134,7 +134,7 @@
 
 
           <!-- "Time_Lapse_Clip_Film" video -->
-          <div class="video-container" style="height:900px;">
+          <div class="video-container" style="height:1300px;">
             <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="11000" data-stopmedia="17000" loop></video>
           </div>
           <!-- end "Time_Lapse_Clip_Film" video -->
@@ -146,37 +146,40 @@
           </audio>
           <!-- end "Strike_Story" background music -->
 
-
           <!-- "town_cemetary03_AR" photo -->
-          <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div>
+       <!--    <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "town_cemetary03_AR" photo -->
 
-
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:700px;" ></div>
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" ></div>
           <!-- end "town02bw_AR" photo -->
 
+          <!-- "BS01_JB" photo -->
+          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" ></div>
+          <!-- end "BS01_JB" photo -->
 
           <!-- "town01_AR" photo -->
-          <div data-mediaid="town01_AR" class="image cover-bg" style="height:700px;" ></div>
+          <div data-mediaid="town01_AR" class="image cover-bg" style="height:950px;" ></div>
           <!-- end "town01_AR" photo -->
 
-        <!-- "richie_house01_IA" photo -->
-          <div data-mediaid="richie_house01_IA" class="image cover-bg" style="height:700px;" ></div>
-          <!-- end "richie_house01_IA" photo -->
+         <!-- "richie_house03bw_IA" photo -->
+          <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px;" ></div>
+          <!-- end "richie_house03bw_IA" photo -->
 
-        <!-- "town05_AR" photo -->
-          <div data-mediaid="town05_AR" class="image cover-bg" style="height:700px;" ></div>
-          <!-- end "town05_AR" photo -->
+         <!-- "town_cemetary02_AR" photo -->
+          <div data-mediaid="town_cemetary02_AR" class="image cover-bg" style="height:900px;" ></div>
+          <!-- end "town_cemetary02_AR" photo -->
 
+         <!-- "town07_AR" photo -->
+          <div data-mediaid="town07_AR" class="image cover-bg" style="height:900px;" ></div>
+          <!-- end "town07_AR" photo -->
 
-        <!-- "town04_AR" photo -->
-          <div data-mediaid="town04_AR" class="image cover-bg" style="height:700px;" ></div>
+          <!-- "town04_AR" photo -->
+          <div data-mediaid="town04_AR" class="image cover-bg" style="height:900px;" ></div>
           <!-- end "town04_AR" photo -->
 
-
         <!-- "town_snow_AR" photo -->
-          <div data-mediaid="town_snow_AR" class="image cover-bg" style="height:700px;" ></div>
+          <div data-mediaid="town_snow_AR" class="image cover-bg" style="height:900px;" ></div>
           <!-- end "town_snow_AR" photo -->
 
 
@@ -187,7 +190,7 @@
           <!-- end "Demolition" video -->
 
         <!-- "BS_pinhole01_JB" photo -->
-          <div data-mediaid="BS_pinhole01_JB" class="image cover-bg" style="height:400px;" ></div>
+          <!-- <div data-mediaid="BS_pinhole01_JB" class="image cover-bg" style="height:400px;" ></div> -->
           <!-- end "BS_pinhole01_JB" photo -->
 
 
