--- a/public/index.html
+++ b/public/index.html
@@ -70,11 +70,11 @@
 
 
          <!-- "empty_room715_JB" photo -->
-          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2600="opacity:1;" data-3000="opacity:0;"></div>
+          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2900="opacity:1;" data-3200="opacity:0;"></div>
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2475" data-stopmedia="5700">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2575" data-stopmedia="4600" data-maxvolume="0.85">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
@@ -95,97 +95,104 @@
           <!-- end "BS02_JB" photo -->
 
           <!-- "pod_room_IA" photo -->
-          <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px"></div>
+          <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px;" data-6170="opacity:1;" data-6280="opacity:0;"></div>
           <!-- end "pod_room_IA" photo -->
 
          <!-- "WelfareRoom" video -->
           <div class="video-container" style="height:1200px;">
-            <video data-mediaid="WelfareRoom"  data-startmedia="6250" data-stopmedia="7200" loop></video>
+            <video data-mediaid="WelfareRoom"  data-startmedia="5550" data-stopmedia="7200"></video>
           </div>
           <!-- end "WelfareRoom" video -->
         
         <!-- "empty_room06_AR" photo -->
-          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;"></div>
+          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;" data-8400="opacity:1;" data-8490="opacity:0;"></div>
           <!-- end "empty_room06_AR" photo -->
 
 
          <!-- "reflections_NoAudio" video -->
-          <div class="video-container" style="height:800px;">
-            <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="10000" loop></video>
+          <div class="video-container" style="height:1000px;"; >
+            <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="10000" loop; ></video>
           </div>
           <!-- end "reflections_NoAudio" video -->
 
 
-          <!-- "high_house_gears01_JB" photo -->
-          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:900px;"></div>
-          <!-- end "high_house_gears01_JB" photo -->
-
+          <!-- "powerhouse_overlap_IA" photo -->
+          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1090px;" data-10300="opacity:1;" data-10500="opacity:0;"></div>
+          <!-- end "powerhouse_overlap_IA" photo --> 
+   
 
           <!-- "making_steel" video -->
-          <div class="video-container" style="height:1200px;margin-top:300px;margin-bottom: 300px;" >
-            <video data-mediaid="making_steel" data-startmedia="9690" data-stopmedia="12000" loop></video>
+          <div class="video-container" style="height:1200px;margin-top:0px;margin-bottom: 300px;" >
+            <video data-mediaid="making_steel" data-startmedia="9100" data-stopmedia="12000" loop></video>
           </div>
           <!-- end "making_steel" video -->          
 
 
+          <!-- "high_house_gears01_JB" photo -->
+          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 100px;"></div>
+          <!-- end "high_house_gears01_JB" photo -->
+
           <!-- "snow_doorway01_AR" photo -->
-          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1000px;"></div>
+          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-12370="opacity:0;" data-12600="opacity:0;" data-13000="opacity:1;"></div>
           <!-- end "snow_doorway01_AR" photo -->
 
 
-          <!-- "Time_Lapse_Clip_Film" video -->
-          <div class="video-container" style="height:1300px;">
-            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="11000" data-stopmedia="17000" loop></video>
-          </div>
-          <!-- end "Time_Lapse_Clip_Film" video -->
-
-
           <!-- "Strike_Story" backround music -->
-          <audio data-mediaid="Strike_Story" data-startmedia="11000" data-stopmedia="16000">
+          <audio data-mediaid="Strike_Story" data-startmedia="13105" data-stopmedia="18000">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Strike_Story" background music -->
 
-          <!-- "town_cemetary03_AR" photo -->
-       <!--    <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div> -->
-          <!-- end "town_cemetary03_AR" photo -->
+          <!-- "BS01_JB" photo -->
+          <!-- <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" ></div> -->
+          <!-- end "BS01_JB" photo -->
 
           <!-- "town02bw_AR" photo -->
           <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" ></div>
           <!-- end "town02bw_AR" photo -->
 
-          <!-- "BS01_JB" photo -->
-          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" ></div>
-          <!-- end "BS01_JB" photo -->
-
           <!-- "town01_AR" photo -->
           <div data-mediaid="town01_AR" class="image cover-bg" style="height:950px;" ></div>
           <!-- end "town01_AR" photo -->
+
+          <!-- "Time_Lapse_Clip_Film" video -->
+          <div class="video-container" style="height:1300px;">
+            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="15800" data-stopmedia="17500" loop></video>
+          </div>
+          <!-- end "Time_Lapse_Clip_Film" video -->
 
          <!-- "richie_house03bw_IA" photo -->
           <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px;" ></div>
           <!-- end "richie_house03bw_IA" photo -->
 
+          <!-- "town_cemetary03_AR" photo -->
+          <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div>
+          <!-- end "town_cemetary03_AR" photo -->
+
          <!-- "town_cemetary02_AR" photo -->
-          <div data-mediaid="town_cemetary02_AR" class="image cover-bg" style="height:900px;" ></div>
+          <!-- <div data-mediaid="town_cemetary02_AR" class="image cover-bg" style="height:900px;" ></div> -->
           <!-- end "town_cemetary02_AR" photo -->
 
          <!-- "town07_AR" photo -->
-          <div data-mediaid="town07_AR" class="image cover-bg" style="height:900px;" ></div>
+          <!-- <div data-mediaid="town07_AR" class="image cover-bg" style="height:900px;" ></div> -->
           <!-- end "town07_AR" photo -->
 
           <!-- "town04_AR" photo -->
-          <div data-mediaid="town04_AR" class="image cover-bg" style="height:900px;" ></div>
+          <!-- <div data-mediaid="town04_AR" class="image cover-bg" style="height:900px;" ></div> -->
           <!-- end "town04_AR" photo -->
 
-        <!-- "town_snow_AR" photo -->
+          <!-- "town_snow_AR" photo -->
           <div data-mediaid="town_snow_AR" class="image cover-bg" style="height:900px;" ></div>
           <!-- end "town_snow_AR" photo -->
+
+          <!-- "demolition03_JB" photo -->
+          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:600px;" ></div>
+          <!-- end "demolition03_JB" photo -->
 
 
           <!-- "Demolition" video -->
           <div class="video-container" style="height:500px;">
-            <video data-mediaid="Demolition" data-startmedia="16000" data-stopmedia="18000" loop></video>
+            <video data-mediaid="Demolition" data-startmedia="20000" data-stopmedia="21000" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
@@ -200,10 +207,12 @@
 
 
           <!-- "Casino_Pods" video -->
-          <div class="video-container" style="height:700px;">
-            <video data-mediaid="Casino_Pods" data-startmedia="18000"></video>
+          <div class="video-container" style="height:700px;margin-top:100px;margin-bottom: 300px;" >
+            <video data-mediaid="Casino_Pods" data-startmedia="21200"></video>
           </div>
           <!-- end "Casino_Pods" video -->
+
+
 
 
         </div>
