WIP, still working on video transition

--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
           <!-- end "pod_room_IA" photo -->
 
          <!-- "WelfareRoom" video -->
-          <div class="video-container" style="height:1200px;">
+          <div class="video-container" data-transitions='{"videoFeature":[]}' style="height:1200px;">
             <video data-mediaid="WelfareRoom"  data-startmedia="6250" data-stopmedia="7200" loop></video>
           </div>
           <!-- end "WelfareRoom" video -->
@@ -117,19 +117,19 @@
 
 
           <!-- "high_house_gears01_JB" photo -->
-          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:900px;"></div>
+          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:900px;margin-bottom:300px;"></div>
           <!-- end "high_house_gears01_JB" photo -->
 
 
           <!-- "making_steel" video -->
-          <div class="video-container" style="height:1200px;margin-top:300px;margin-bottom: 300px;" >
+          <div class="video-container" data-transitions='{"videoFeature":[]}' style="height:1200px;" >
             <video data-mediaid="making_steel" data-startmedia="10000" data-stopmedia="12000" loop></video>
           </div>
           <!-- end "making_steel" video -->          
 
 
           <!-- "snow_doorway01_AR" photo -->
-          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1000px;"></div>
+          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1000px;margin-top:300px;"></div>
           <!-- end "snow_doorway01_AR" photo -->
 
 
