replace welfareroom, making steel, fixing destruction & strike sections

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
 
           <!-- "Steel_Music_From_3MinFilm" backround music -->
-          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-maxvolume="0.75">
+          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-maxvolume="0.5">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
@@ -100,29 +100,29 @@
 
          <!-- "WelfareRoom" video -->
           <div class="video-container" style="height:1200px;">
-            <video data-mediaid="WelfareRoom"  data-startmedia="5550" data-stopmedia="7200"></video>
+            <video data-mediaid="WelfareRoom"  data-startmedia="5400" data-stopmedia="7200"></video>
           </div>
           <!-- end "WelfareRoom" video -->
         
         <!-- "empty_room06_AR" photo -->
-          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;" data-8400="opacity:1;" data-8490="opacity:0;"></div>
+          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;" data-8290="opacity:1;" data-8470="opacity:0;"></div>
           <!-- end "empty_room06_AR" photo -->
 
 
          <!-- "reflections_NoAudio" video -->
-          <div class="video-container" style="height:1000px;"; >
-            <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="10000" loop; ></video>
+          <div class="video-container" style="height:600px;"; >
+            <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="9500" loop; ></video>
           </div>
           <!-- end "reflections_NoAudio" video -->
 
 
           <!-- "powerhouse_overlap_IA" photo -->
-          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1090px;" data-10300="opacity:1;" data-10500="opacity:0;"></div>
+          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1090px;" data-8210="opacity:0;" data-850 0="opacity:0;" data-8600="opacity:1;" data-10450="opacity:0;"></div>
           <!-- end "powerhouse_overlap_IA" photo --> 
    
 
           <!-- "making_steel" video -->
-          <div class="video-container" style="height:1200px;margin-top:0px;margin-bottom: 300px;" >
+          <div class="video-container" style="height:1200px;margin-top:100px;margin-bottom: 300px;" >
             <video data-mediaid="making_steel" data-startmedia="9100" data-stopmedia="12000" loop></video>
           </div>
           <!-- end "making_steel" video -->          
@@ -138,35 +138,41 @@
 
 
           <!-- "Strike_Story" backround music -->
-          <audio data-mediaid="Strike_Story" data-startmedia="13105" data-stopmedia="18000">
+          <audio data-mediaid="Strike_Story" data-startmedia="13205" data-stopmedia="19000">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Strike_Story" background music -->
 
+
           <!-- "BS01_JB" photo -->
-          <!-- <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" ></div> -->
+          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-14800="opacity:1;" data-15060="opacity:0;"></div>
           <!-- end "BS01_JB" photo -->
 
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" ></div>
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-14050="background-size: 106%;" data-14600="background-size: 106%;" data-15070="background-size: 100%"></div>
           <!-- end "town02bw_AR" photo -->
-
-          <!-- "town01_AR" photo -->
-          <div data-mediaid="town01_AR" class="image cover-bg" style="height:950px;" ></div>
-          <!-- end "town01_AR" photo -->
-
-          <!-- "Time_Lapse_Clip_Film" video -->
-          <div class="video-container" style="height:1300px;">
-            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="15800" data-stopmedia="17500" loop></video>
-          </div>
-          <!-- end "Time_Lapse_Clip_Film" video -->
 
          <!-- "richie_house03bw_IA" photo -->
           <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px;" ></div>
           <!-- end "richie_house03bw_IA" photo -->
 
+          <!-- "town01_AR" photo -->
+          <div data-mediaid="town01_AR" class="image cover-bg" style="height:950px;" ></div>
+          <!-- end "town01_AR" photo -->
+
           <!-- "town_cemetary03_AR" photo -->
           <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div>
+          <!-- end "town_cemetary03_AR" photo -->
+
+
+          <!-- "Time_Lapse_Clip_Film" video -->
+          <div class="video-container" style="height:1300px;">
+            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="15800" data-stopmedia="18500" loop></video>
+          </div>
+          <!-- end "Time_Lapse_Clip_Film" video -->
+
+          <!-- "town_cemetary03_AR" photo -->
+          <!-- <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "town_cemetary03_AR" photo -->
 
          <!-- "town_cemetary02_AR" photo -->
@@ -182,33 +188,45 @@
           <!-- end "town04_AR" photo -->
 
           <!-- "town_snow_AR" photo -->
-          <div data-mediaid="town_snow_AR" class="image cover-bg" style="height:900px;" ></div>
+          <!-- <div data-mediaid="town_snow_AR" class="image cover-bg" style="height:900px;" ></div> -->
           <!-- end "town_snow_AR" photo -->
 
+          <!-- "BS_pinhole02_JB" photo -->
+          <!-- <div data-mediaid="BS_pinhole02_JB" class="image cover-bg" style="height:400px;" ></div> -->
+          <!-- end "BS_pinhole02_JB" photo -->
+
           <!-- "demolition03_JB" photo -->
-          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:600px;" ></div>
+          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:700px;" ></div>
           <!-- end "demolition03_JB" photo -->
+
+           <!-- "demolition686_steel_JB" photo -->
+          <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" ></div> -->
+          <!-- end "demolition686_steel_JB" photo -->
 
 
           <!-- "Demolition" video -->
           <div class="video-container" style="height:500px;">
-            <video data-mediaid="Demolition" data-startmedia="20000" data-stopmedia="21000" loop></video>
+            <video data-mediaid="Demolition" data-startmedia="20000" data-stopmedia="22000" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
-        <!-- "BS_pinhole01_JB" photo -->
-          <!-- <div data-mediaid="BS_pinhole01_JB" class="image cover-bg" style="height:400px;" ></div> -->
-          <!-- end "BS_pinhole01_JB" photo -->
 
+        <!-- "destruction02_AR" photo -->
+          <!-- <div data-mediaid="destruction02_AR" class="image cover-bg" style="height:800px;" ></div> -->
+          <!-- end "destruction02_AR" photo -->
 
-        <!-- "BS_pinhole02_JB" photo -->
-          <div data-mediaid="BS_pinhole02_JB" class="image cover-bg" style="height:400px;" ></div>
-          <!-- end "BS_pinhole02_JB" photo -->
+        <!-- "construction_snow02_AR" photo -->
+          <!-- <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div> -->
+          <!-- end "construction_snow02_AR" photo -->
+
+        <!-- "construction04_AR" photo -->
+          <!-- <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" ></div> -->
+          <!-- end "construction04_AR" photo -->
 
 
           <!-- "Casino_Pods" video -->
-          <div class="video-container" style="height:700px;margin-top:100px;margin-bottom: 300px;" >
-            <video data-mediaid="Casino_Pods" data-startmedia="21200"></video>
+          <div class="video-container" style="height:700px;margin-top:75px;margin-bottom: 700px;" >
+            <video data-mediaid="Casino_Pods" data-startmedia="21500"></video>
           </div>
           <!-- end "Casino_Pods" video -->
 
