intro text spacing, richie text, and destruction sequence photos

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
 
          <!-- "tower" photo -->
-          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2350="opacity:0;"></div>
+          <div data-mediaid="tower" class="image cover-bg" style="height:900px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2050="opacity:1;" data-2250="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
@@ -70,7 +70,7 @@
 
 
          <!-- "empty_room715_JB" photo -->
-          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2900="opacity:1;" data-3200="opacity:0;"></div>
+          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2720="opacity:1;" data-3075="opacity:0;"></div>
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
@@ -95,7 +95,7 @@
           <!-- end "BS02_JB" photo -->
 
           <!-- "pod_room_IA" photo -->
-          <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px;" data-6170="opacity:1;" data-6280="opacity:0;"></div>
+          <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px;" data-6140="opacity:1;" data-6270="opacity:0;"></div>
           <!-- end "pod_room_IA" photo -->
 
          <!-- "WelfareRoom" video -->
@@ -117,7 +117,7 @@
 
 
           <!-- "powerhouse_overlap_IA" photo -->
-          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1090px;" data-8210="opacity:0;" data-850 0="opacity:0;" data-8600="opacity:1;" data-10450="opacity:0;"></div>
+          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1090px;" data-8210="opacity:0;" data-8700="opacity:0;" data-8900="opacity:1;" data-9500="opacity:1;" data-10450="opacity:0;"></div>
           <!-- end "powerhouse_overlap_IA" photo --> 
    
 
@@ -199,10 +199,6 @@
           <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:700px;" ></div>
           <!-- end "demolition03_JB" photo -->
 
-           <!-- "demolition686_steel_JB" photo -->
-          <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" ></div> -->
-          <!-- end "demolition686_steel_JB" photo -->
-
 
           <!-- "Demolition" video -->
           <div class="video-container" style="height:500px;">
@@ -210,17 +206,20 @@
           </div>
           <!-- end "Demolition" video -->
 
+          <!-- "demolition686_steel_JB" photo -->
+          <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" data-19720="opacity:0;" data-21000="opacity:1;" ></div> -->
+          <!-- end "demolition686_steel_JB" photo -->
 
         <!-- "destruction02_AR" photo -->
-          <!-- <div data-mediaid="destruction02_AR" class="image cover-bg" style="height:800px;" ></div> -->
+          <div data-mediaid="destruction02_AR" class="image cover-bg" style="height:800px;"></div>
           <!-- end "destruction02_AR" photo -->
 
         <!-- "construction_snow02_AR" photo -->
-          <!-- <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div> -->
+          <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div>
           <!-- end "construction_snow02_AR" photo -->
 
         <!-- "construction04_AR" photo -->
-          <!-- <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" ></div> -->
+          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" ></div>
           <!-- end "construction04_AR" photo -->
 
 
@@ -258,74 +257,80 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:50px;" class="text-overlay" data-0="opacity:0;" data-2450="opacity:0;" data-2550="opacity:1;">
+            <div style="margin-top:50px;" class="text-overlay" data-0="opacity:0;" data-2425="opacity:0;" data-2475="opacity:1;">
               <p>Golden Gate Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2500="opacity:0;" data-2600="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2475="opacity:0;" data-2525="opacity:1;">
               <p>Empire State Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2600="opacity:0;" data-2650="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2575="opacity:1;">
               <p>Chrysler Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2750="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
               <p>Woolworth Building</p>
             </div>
-            <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2850="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
               <p>Verrazano Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2950="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
               <p>Mackinac Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2950="opacity:0;" data-3025="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
               <p>Lincoln Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-3025="opacity:0;" data-3100="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
               <p>Holland Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-3100="opacity:0;" data-3175="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
               <p>Rockefeller Center</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-3250="opacity:0;" data-3325="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;">
               <p>Madison Square Garden</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-3350="opacity:0;" data-3425="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3360="opacity:0;">
               <p>Hoover Dam</p>
             </div>
             <!-- end text overlay -->
 
              <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-3450="opacity:0;" data-3525="opacity:1;">
+            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;">
               <p>WW II armaments &amp; ships...</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="margin-top:4000px;" class="text-overlay" data-0="opacity:0;" data-3525="opacity:0;" data-3650="opacity:1;">
+              <p>–Richie Chech <br>
+                Former Steel Worker</p>
             </div>
             <!-- end text overlay -->
             
