--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
 
          <!-- "tower" photo -->
-          <div data-mediaid="tower" class="image cover-bg" style="height:900px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2050="opacity:1;" data-2250="opacity:0;"></div>
+          <div data-mediaid="tower" class="image cover-bg" style="height:900px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-1825="opacity:1;" data-2250="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
@@ -70,7 +70,7 @@
 
 
          <!-- "empty_room715_JB" photo -->
-          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2720="opacity:1;" data-3075="opacity:0;"></div>
+          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2670="opacity:1;" data-3075="opacity:0;"></div>
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
@@ -95,7 +95,7 @@
           <!-- end "BS02_JB" photo -->
 
           <!-- "pod_room_IA" photo -->
-          <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px;" data-6140="opacity:1;" data-6270="opacity:0;"></div>
+          <div data-mediaid="pod_room_IA" class="image cover-bg" style="height:850px;" data-6140="opacity:1;" data-6370="opacity:0;"></div>
           <!-- end "pod_room_IA" photo -->
 
          <!-- "WelfareRoom" video -->
@@ -105,35 +105,35 @@
           <!-- end "WelfareRoom" video -->
         
         <!-- "empty_room06_AR" photo -->
-          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;" data-8290="opacity:1;" data-8470="opacity:0;"></div>
+          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;" data-6800="opacity:0;" data-7700="opacity:1;" data-8300="opacity:1;" data-8500="opacity:0;"></div>
           <!-- end "empty_room06_AR" photo -->
 
 
          <!-- "reflections_NoAudio" video -->
-          <div class="video-container" style="height:600px;"; >
+          <div class="video-container" style="height:725px;"; >
             <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="9500" loop; ></video>
           </div>
           <!-- end "reflections_NoAudio" video -->
 
 
           <!-- "powerhouse_overlap_IA" photo -->
-          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1090px;" data-8210="opacity:0;" data-8700="opacity:0;" data-8900="opacity:1;" data-9500="opacity:1;" data-10450="opacity:0;"></div>
+          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1190px;" data-8300="opacity:0;" data-8700="opacity:0;" data-9200="opacity:1;" data-9900="opacity:1;" data-10450="opacity:0;"></div>
           <!-- end "powerhouse_overlap_IA" photo --> 
    
 
           <!-- "making_steel" video -->
-          <div class="video-container" style="height:1200px;margin-top:100px;margin-bottom: 300px;" >
-            <video data-mediaid="making_steel" data-startmedia="9100" data-stopmedia="12000" loop></video>
+          <div class="video-container" style="height:800px;margin-top:100px;margin-bottom: 50px;" >
+            <video data-mediaid="making_steel" data-startmedia="9900" data-stopmedia="11500" loop></video>
           </div>
           <!-- end "making_steel" video -->          
 
 
           <!-- "high_house_gears01_JB" photo -->
-          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 100px;"></div>
+          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 0px;" data-12100="opacity:1;" data-12700="opacity:0;"></div>
           <!-- end "high_house_gears01_JB" photo -->
 
           <!-- "snow_doorway01_AR" photo -->
-          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-12370="opacity:0;" data-12600="opacity:0;" data-13000="opacity:1;"></div>
+          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-11500="opacity:0;" data-12000="opacity:0;" data-12600="opacity:1;"></div>
           <!-- end "snow_doorway01_AR" photo -->
 
 
@@ -145,28 +145,28 @@
 
 
           <!-- "BS01_JB" photo -->
-          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-14800="opacity:1;" data-15060="opacity:0;"></div>
+          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-13600="opacity:1;" data-13800="opacity:1;" data-14300="opacity:0;"></div>
           <!-- end "BS01_JB" photo -->
 
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-14050="background-size: 106%;" data-14600="background-size: 106%;" data-15070="background-size: 100%"></div>
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:810px;" data-13500="background-size: 104%;" data-14150="background-size: 100%"></div>
           <!-- end "town02bw_AR" photo -->
-
-         <!-- "richie_house03bw_IA" photo -->
-          <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px;" ></div>
-          <!-- end "richie_house03bw_IA" photo -->
 
           <!-- "town01_AR" photo -->
           <div data-mediaid="town01_AR" class="image cover-bg" style="height:950px;" ></div>
           <!-- end "town01_AR" photo -->
 
+         <!-- "richie_house03bw_IA" photo -->
+          <div data-mediaid="richie_house03bw_IA" class="image cover-bg" style="height:975px; margin-bottom: 250px; " data-16400="opacity:1;" data-16900="opacity:0;"></div>
+          <!-- end "richie_house03bw_IA" photo -->
+
           <!-- "town_cemetary03_AR" photo -->
-          <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div>
+          <!-- <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "town_cemetary03_AR" photo -->
 
 
           <!-- "Time_Lapse_Clip_Film" video -->
-          <div class="video-container" style="height:1300px;">
+          <div class="video-container" style="height:900px;">
             <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="15800" data-stopmedia="18500" loop></video>
           </div>
           <!-- end "Time_Lapse_Clip_Film" video -->
@@ -175,9 +175,9 @@
           <!-- <div data-mediaid="town_cemetary03_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "town_cemetary03_AR" photo -->
 
-         <!-- "town_cemetary02_AR" photo -->
-          <!-- <div data-mediaid="town_cemetary02_AR" class="image cover-bg" style="height:900px;" ></div> -->
-          <!-- end "town_cemetary02_AR" photo -->
+         <!-- "richie01_AR" photo -->
+          <!-- <div data-mediaid="richie01_AR" class="image cover-bg" style="height:900px;" ></div> -->
+          <!-- end "richie01_AR" photo -->
 
          <!-- "town07_AR" photo -->
           <!-- <div data-mediaid="town07_AR" class="image cover-bg" style="height:900px;" ></div> -->
@@ -196,13 +196,13 @@
           <!-- end "BS_pinhole02_JB" photo -->
 
           <!-- "demolition03_JB" photo -->
-          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:700px;" ></div>
+          <div data-mediaid="demolition03_JB" class="image cover-bg" style="height:700px;" data-17500="opacity:0;" data-17900="opacity:1;"></div>
           <!-- end "demolition03_JB" photo -->
 
 
           <!-- "Demolition" video -->
-          <div class="video-container" style="height:500px;">
-            <video data-mediaid="Demolition" data-startmedia="20000" data-stopmedia="22000" loop></video>
+          <div class="video-container" style="height:900px;">
+            <video data-mediaid="Demolition" data-startmedia="18400" data-stopmedia="19500" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
@@ -210,22 +210,22 @@
           <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" data-19720="opacity:0;" data-21000="opacity:1;" ></div> -->
           <!-- end "demolition686_steel_JB" photo -->
 
-        <!-- "destruction02_AR" photo -->
-          <div data-mediaid="destruction02_AR" class="image cover-bg" style="height:800px;"></div>
-          <!-- end "destruction02_AR" photo -->
+        <!-- "destruction01_AR" photo -->
+          <div data-mediaid="destruction01_AR" class="image cover-bg" style="height:800px;"></div>
+          <!-- end "destruction01_AR" photo -->
 
         <!-- "construction_snow02_AR" photo -->
-          <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div>
+          <!-- <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "construction_snow02_AR" photo -->
 
         <!-- "construction04_AR" photo -->
-          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" ></div>
+          <!-- <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" ></div> -->
           <!-- end "construction04_AR" photo -->
 
 
           <!-- "Casino_Pods" video -->
           <div class="video-container" style="height:700px;margin-top:75px;margin-bottom: 700px;" >
-            <video data-mediaid="Casino_Pods" data-startmedia="21500"></video>
+            <video data-mediaid="Casino_Pods" data-startmedia="19750"></video>
           </div>
           <!-- end "Casino_Pods" video -->
 
@@ -244,14 +244,20 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-2000="opacity:0;" data-2100="opacity:1;" data-2400="opacity:1;" data-2600="opacity:0">
+            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
-              Bethlehem Steel was a major center of American industry</p>
+              Bethlehem Steel was a major center of US industry</p>
+            </div>
+            <!-- end text overlay -->
+
+             <!-- text overlay -->
+            <div style="margin-top:0px;" class="text-overlay" data-0="opacity:0;" data-1925="opacity:0;" data-2125="opacity:1;" data-2400="opacity:1;" data-2575="opacity:0">
+              <p> --creating rail, skyscrapers &amp; infrastructure that helped build America.</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:200px;" class="text-overlay" data-0="opacity:0;" data-2300="opacity:0;" data-2400="opacity:1;">
+            <div style="margin-top:200px;" class="text-overlay" data-0="opacity:0;" data-2400="opacity:0;" data-2450="opacity:1;">
               <p>Workers at “The Steel” forged:</p>
             </div>
             <!-- end text overlay -->
@@ -263,72 +269,72 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2475="opacity:0;" data-2525="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2475="opacity:0;" data-2525="opacity:1;">
               <p>Empire State Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2575="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2575="opacity:1;">
               <p>Chrysler Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
               <p>Woolworth Building</p>
             </div>
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
               <p>Verrazano Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
               <p>Mackinac Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
               <p>Lincoln Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
               <p>Holland Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
               <p>Rockefeller Center</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;" data-3290="opacity:1;" data-3390="opacity:0;">
               <p>Madison Square Garden</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3360="opacity:0;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3330="opacity:1;" data-3430="opacity:0;">
               <p>Hoover Dam</p>
             </div>
             <!-- end text overlay -->
 
              <!-- text overlay -->
-            <div style="margin-top:30px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;">
+            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;" data-3450="opacity:1;" data-3500="opacity:0;">
               <p>WW II armaments &amp; ships...</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:4000px;" class="text-overlay" data-0="opacity:0;" data-3525="opacity:0;" data-3650="opacity:1;">
+            <div style="margin-top:4250px;" class="text-overlay" data-0="opacity:0;" data-6340="opacity:0;" data-6440="opacity:0;" data-6560="opacity:1;" data-6660="opacity:0;">
               <p>–Richie Chech <br>
                 Former Steel Worker</p>
             </div>
