Remove data-transition from making_steel video

--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
    
 
           <!-- "making_steel" video -->
-          <div class="video-container" data-transitions='{"videoFeature":[]}' style="height:800px;margin-top:100px;margin-bottom: 50px;" >
+          <div class="video-container" style="height:800px;margin-top:100px;margin-bottom: 50px;" >
             <video data-mediaid="making_steel" data-startmedia="9900" data-stopmedia="11500" loop></video>
           </div>
           <!-- end "making_steel" video -->          
