add fan movie, correct text (skipped down page for some reason)

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2575" data-stopmedia="4600" data-maxvolume="0.85">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2575" data-stopmedia="4600" data-maxvolume="0.5">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
@@ -106,7 +106,7 @@
           <!-- end "WelfareRoom" video -->
         
         <!-- "empty_room06_AR" photo -->
-          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;" data-6800="opacity:0;" data-7700="opacity:1;" data-8300="opacity:1;" data-8500="opacity:0;"></div>
+          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:970px;" data-6800="opacity:0;" data-7700="opacity:1;" data-8200="opacity:1;" data-8500="opacity:0.5;" data-8600="opacity:0;"></div>
           <!-- end "empty_room06_AR" photo -->
 
 
@@ -118,35 +118,42 @@
 
 
           <!-- "powerhouse_overlap_IA" photo -->
-          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1190px;" data-8300="opacity:0;" data-8700="opacity:0;" data-9200="opacity:1;" data-9900="opacity:1;" data-10450="opacity:0;"></div>
+          <div data-mediaid="powerhouse_overlap_IA" class="image cover-bg" style="height:1190px;" data-8500="opacity:0;" data-8800="opacity:0.5;" data-9200="opacity:1;" data-98900="opacity:1;" data-10500="opacity:0;"></div>
           <!-- end "powerhouse_overlap_IA" photo --> 
+
+          <!-- "fan02_NoAudio" video -->
+          <div class="video-container" style="height:800px;margin-top:10px;margin-bottom: 700px;" >
+          <video data-mediaid="fan02_NoAudio" data-startmedia="9900" data-stopmedia="11500" loop></video>
+          </div>
+          <!-- end "fan02_NoAudio" video -->  
    
 
+
           <!-- "making_steel" video -->
-          <div class="video-container" style="height:800px;margin-top:100px;margin-bottom: 50px;" >
-            <video data-mediaid="making_steel" data-startmedia="9900" data-stopmedia="11500" loop></video>
+          <div class="video-container" style="height:800px;">
+            <video data-mediaid="making_steel"  data-startmedia="11100" data-stopmedia="12800"></video>
           </div>
-          <!-- end "making_steel" video -->          
+          <!-- end "making_steel" video -->     
 
 
           <!-- "high_house_gears01_JB" photo -->
-          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 0px;" data-12100="opacity:1;" data-12700="opacity:0;"></div>
+          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1000px; margin-bottom: 0px;" data-13700="opacity:1;" data-14000="opacity:0;"></div>
           <!-- end "high_house_gears01_JB" photo -->
 
           <!-- "snow_doorway01_AR" photo -->
-          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-11500="opacity:0;" data-12000="opacity:0;" data-12600="opacity:1;"></div>
+          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1100px;" data-12500="opacity:0;" data-13300="opacity:0;" data-13600="opacity:1;"></div>
           <!-- end "snow_doorway01_AR" photo -->
 
 
           <!-- "Strike_Story" backround music -->
-          <audio data-mediaid="Strike_Story" data-startmedia="13205" data-stopmedia="19000">
+          <audio data-mediaid="Strike_Story" data-startmedia="13780" data-stopmedia="17900">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Strike_Story" background music -->
 
 
           <!-- "BS01_JB" photo -->
-          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-13600="opacity:1;" data-13800="opacity:1;" data-14300="opacity:0;"></div>
+          <div data-mediaid="BS01_JB" class="image cover-bg" style="height:625px;" data-14000="opacity:1;" data-15500="opacity:1;" data-15900="opacity:0;"></div>
           <!-- end "BS01_JB" photo -->
 
           <!-- "town02bw_AR" photo -->
@@ -203,7 +210,7 @@
 
           <!-- "Demolition" video -->
           <div class="video-container" style="height:900px;">
-            <video data-mediaid="Demolition" data-startmedia="18400" data-stopmedia="19500" loop></video>
+            <video data-mediaid="Demolition" data-startmedia="18400" data-stopmedia="19500" data-maxvolume="0.5" loop></video>
           </div>
           <!-- end "Demolition" video -->
 
@@ -245,7 +252,7 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1035px;" class="text-overlay" data-0="opacity:0;" data-1875="opacity:0;" data-1975="opacity:1;" data-2350="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
               Bethlehem Steel was a major center of US industry</p>
             </div>
@@ -258,84 +265,84 @@
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:200px;" class="text-overlay" data-0="opacity:0;" data-2400="opacity:0;" data-2450="opacity:1;">
+            <div style="margin-top:200px;" class="text-overlay" data-0="opacity:0;" data-2450="opacity:0;" data-2475="opacity:1;">
               <p>Workers at “The Steel” forged:</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:50px;" class="text-overlay" data-0="opacity:0;" data-2425="opacity:0;" data-2475="opacity:1;">
+            <div style="margin-top:35px;" class="text-overlay" data-0="opacity:0;" data-2500="opacity:0;" data-2525="opacity:1;">
               <p>Golden Gate Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2475="opacity:0;" data-2525="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2550="opacity:1;">
               <p>Empire State Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2525="opacity:0;" data-2575="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2550="opacity:0;" data-2575="opacity:1;">
               <p>Chrysler Building</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2575="opacity:0;" data-2625="opacity:1;">
               <p>Woolworth Building</p>
             </div>
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2625="opacity:0;" data-2675="opacity:1;">
               <p>Verrazano Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2725="opacity:1;">
               <p>Mackinac Bridge</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2725="opacity:0;" data-2775="opacity:1;">
               <p>Lincoln Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2825="opacity:1;">
               <p>Holland Tunnel</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2825="opacity:0;" data-2875="opacity:1;">
               <p>Rockefeller Center</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;" data-3290="opacity:1;" data-3390="opacity:0;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2925="opacity:1;" data-3360="opacity:1;" data-3400="opacity:0;">
               <p>Madison Square Garden</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3330="opacity:1;" data-3430="opacity:0;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2925="opacity:0;" data-2975="opacity:1;" data-3380="opacity:1;" data-3440="opacity:0;">
               <p>Hoover Dam</p>
             </div>
             <!-- end text overlay -->
 
              <!-- text overlay -->
-            <div style="margin-top:27px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;" data-3450="opacity:1;" data-3500="opacity:0;">
+            <div style="margin-top:18px;" class="text-overlay" data-0="opacity:0;" data-2975="opacity:0;" data-3025="opacity:1;" data-3450="opacity:1;" data-3500="opacity:0;">
               <p>WW II armaments &amp; ships...</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:4250px;" class="text-overlay" data-0="opacity:0;" data-6340="opacity:0;" data-6440="opacity:0;" data-6560="opacity:1;" data-6660="opacity:0;">
+            <div style="margin-top:3750px;" class="text-overlay" data-6500="opacity:0;" data-6630="opacity:1;" data-6700="opacity:1;" data-6800="opacity:0;">
               <p>–Richie Chech <br>
                 Former Steel Worker</p>
             </div>
