add construction photo before casino

--- a/public/index.html
+++ b/public/index.html
@@ -215,9 +215,6 @@
           </div>
           <!-- end "Demolition" video -->
 
-          <!-- "demolition686_steel_JB" photo -->
-          <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" data-19720="opacity:0;" data-21000="opacity:1;" ></div> -->
-          <!-- end "demolition686_steel_JB" photo -->
 
         <!-- "destruction01_AR" photo -->
           <div data-mediaid="destruction01_AR" class="image cover-bg" style="height:900px;" data-20400="opacity:0;" data-20900="opacity:0.5;" data-21000="opacity:1;"></div>
@@ -227,8 +224,13 @@
           <!-- <div data-mediaid="construction_snow02_AR" class="image cover-bg" style="height:700px;" ></div> -->
           <!-- end "construction_snow02_AR" photo -->
 
+          
+          <!-- "demolition686_steel_JB" photo -->
+          <!-- <div data-mediaid="demolition686_steel_JB" class="image cover-bg" style="height:500px;" data-19720="opacity:0;" data-21000="opacity:1;" ></div> -->
+          <!-- end "demolition686_steel_JB" photo -->
+
         <!-- "construction04_AR" photo -->
-          <!-- <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" ></div> -->
+          <div data-mediaid="construction04_AR" class="image cover-bg" style="height:800px;" " data-20400="opacity:0;" data-20900="opacity:0.5;" data-21000="opacity:1;"></div>
           <!-- end "construction04_AR" photo -->
 
 
